2008-05-12  Hans Breuer  <hans@breuer.org>

	* app/sheets.c : attempt to add some robustness

	* app/find-and-replace.c : replace (al) part is working, too.
	
2008-05-11  Hans Breuer  <hans@breuer.org>

	* lib/filer.h app/menus.c : changed signature of DiaCallbackFunc to
	additionally take an optional file name
	* plug-ins/cairo/diacairo-print.[ch] plug-ins/python/diamodule.c : 
	adapted to the new signature

	* app/paginate_gdiprint.(h|cpp) : move to ...
	  plug-ins/wmf/paginate_gdiprint.(h|cpp) plug-ins/wmf/wmf.cpp : ... 
	and make it work as a plug-in, temporary registered as "Print (GDI)"
	
	* plug-ins/postscript/* copied mainly from app/* :
	* plug-ins/postscript/postscript.c : register Dia's formerly built-in
	PS filters as plug-in, so they can be switched off when obsoleted by
	cairo or the user does not want them, printing temporary registered as
	"Print (PS)"

	* postscript/paginate_psprint.c(diagram_print_ps) : filename handling
	* configure.in plug-ins/Makefile.am plug-ins/postscript/Makefile.am
	  plug-ins/postscript/postscript.c : build the plug-in and ...
	* app/diapsft2renderer.[ch] app/diapsrenderer.[ch] app/render_eps.[ch] 
	  app/paginate_psprint.[ch] app/win32print.[ch] : ... remove ...
	  app/app_procs.c app/commands.c app/Makefile.am app/makefile.msc : 
	... postscript handling from core
	* app/diagram.c app/app_procs.c : removed dangling includes
	* po/POTFILES.in : reflect movement of files

	* lib/ps-utf8.[ch] : moved to plug-ins/postscript/ps-utf8.[ch]
	* lib/Makefile.am lib/makefile.msc plug-ins/makefile.msc 
	  plug-ins/postscript/Makefile.am lib/libdia.def : updated accordingly

	* objects/standard/outline.c : don't try to render a bezier with 0 points

2008-05-10  Hans Breuer  <hans@breuer.org>

	* objects/standard/outline.c(move_handle) : initial implementation
	* objects/Misc/measure.c : object position should be start point

	* lib/widget.c(DiaSizeSelector): initialize static variable, avoid